added experiences section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="section-title">
             <h1 class="page-section">Projects</h1>
             <article id="1" class="section-container">
-                <h2><a href="https://github.com/djain106/gambit">Gambit</a><i style="float: right;" class="fas fa-dice"></i></h2>
+                <h3><a href="https://github.com/djain106/gambit">Gambit</a><i style="float: right;" class="fas fa-dice"></i></h3>
                 <p><span class="underline">Technologies</span>: MongoDB, Express, React, Node
                     <br><span class="underline">Languages</span>: JavaScript, HTML, CSS
                     <br><span class="underline">About</span>: A React application that I used to teach myself more
@@ -75,7 +75,7 @@
                 </p>
             </article>
             <article id="2" class="section-container">
-                <h2><a href="https://github.com/djain106/tf-idf">TF-IDF</a><i style="float: right;" class="fas fa-search"></i></h2>
+                <h3><a href="https://github.com/djain106/tf-idf">TF-IDF</a><i style="float: right;" class="fas fa-search"></i></h3>
                 <p>
                     <span class="underline">Languages</span>: Python
                     <br><span class="underline">About</span>: This project implements the <a class="underline"
@@ -87,7 +87,7 @@
                 </p>
             </article>
             <article id="3" class="section-container">
-                <h2><a href="https://github.com/djain106/webnote">WebNote</a><i style="float: right;" class="far fa-sticky-note"></i></h2>
+                <h3><a href="https://github.com/djain106/webnote">WebNote</a><i style="float: right;" class="far fa-sticky-note"></i></h3>
                 <p>
                     <span class="underline">Languages</span>: JavaScript
                     <br><span class="underline">About</span>: This project is a chrome extension that allows users to
@@ -100,7 +100,7 @@
                 </p>
             </article>
             <article id="4" class="section-container">
-                <h2><a href="https://github.com/djain106/disbiome_matlab">Disbiome Analysis</a><i style="float: right;" class="fas fa-calculator"></i></h2>
+                <h3><a href="https://github.com/djain106/disbiome_matlab">Disbiome Analysis</a><i style="float: right;" class="fas fa-calculator"></i></h3>
                 <p>
                     <span class="underline">Technologies</span>: SciKit-Learn or TensorFlow
                     <br><span class="underline">Languages</span>: MATLAB, Python
@@ -114,10 +114,26 @@
                 </p>
             </article>
         </section>
-        <div class="section-title">
+        <div class="section-title" id="experience">
             <h1 class="page-section">Experience</h1>
             <div class="section-container">
-                <p>Coming Soon!</p>
+                <h3><a href="https://www.airproducts.com/">Air Products</a><i style="float: right;" class="fas fa-flask"></i></h3>
+                <p>
+                    <span class="underline">Title</span>: Process Engineering Intern
+                    <br> Worked on creating Excel tools for analyzing temperature profiles within Liquid Natural Gas Heat Exchangers.
+                    Worked in VBA to automate the process of these calculations. Also designed a tool for determining heat exchanger costs
+                    for 5+ designs.
+                </p>
+            </div>
+            <div class="section-container">
+                <h3><a href="http://endevorllc.com/">Endevor</a><i style="float: right;" class="fas fa-code"></i></h3>
+                <p>
+                    <span class="underline">Title</span>: Software Engineering Intern
+                    <br><span class="underline">Technologies</span>: .NET Framework, SQL, CSS, JS, C#
+                    <br> Worked on developing Illuminate Suite, a software to improve accessibility and security of 
+                    nuclear plant security. I desigend Forward Access Point, the primary application for security personnel
+                    to determine if a person is granted or denied access to the plant.
+                </p>
             </div>
         </div>
         <div class="section-title">
