added help button toggle

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <div id="controls">
             <button id="close_animation">Go Back</button>
             <button id="use_car">Use Computer</button>
-            <button disabled="true" id="deactivate_car">Stop</button>
+            <button hidden="true" id="deactivate_car">Stop</button>
+            <button hidden="true" id="controls_help">Help</button>
         </div>
     </div>
     <div id="animation">
