added instructions toggle button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
             <button hidden="true" id="deactivate_car">Stop</button>
             <button hidden="true" id="controls_help">Help</button>
         </div>
+        <div id="instructions" hidden="true">
+            <p>
+                Instructions:
+                <br>W → Forward
+                <br>A → Left
+                <br>S → Back
+                <br>D → Right
+                <br>Ctrl → Down
+                <br>Space → Up
+                <br>Shift → Increase Speed
+            </p>
+        </div>
     </div>
     <div id="animation">
     </div>
