Updated current experience

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
             <pre><code class="lang-js">> const DAKSH_JAIN = <span id="typed" style="color: #D69D85;"></span>;
         <br>> var interests = ["Software Engineering", "Machine Learning", "Fullstack Development"];
         <br>> var now = ["This Page", "Working on Gambit!"]; <a style="text-decoration: none;" href="https://github.com/djain106/gambit">//Click Me!</span></a>
-        
         </div>
         <section class="section-title">
             <h1 class="page-section">Projects</h1>
@@ -129,6 +128,14 @@
         </section>
         <div class="section-title" id="experience">
             <h1 class="page-section">Experience</h1>
+            <div class="section-container">
+                <h3><a href="https://www.amazon.com/">Amazon</a><i style="float: right;" class="fas fa-code"></i></h3>
+                <p>
+                    <span class="underline">Title</span>: Software Development Engineer 
+                    <br><span class="underline">Technologies</span>: Java 
+                    <br> Working on developing new features and applications within the Amazon marketplace. Provide users with a better experience in 
+                    searching for various products and deals within the retail store.</p>
+            </div>
             <div class="section-container">
                 <h3><a href="https://www.airproducts.com/">Air Products</a><i style="float: right;" class="fas fa-flask"></i></h3>
                 <p>
