Update current job.

--- a/index.html
+++ b/index.html
@@ -66,10 +66,19 @@
             <h2>aboutMe.js</h2>
             <pre><code class="lang-js">> const DAKSH_JAIN = <span id="typed" style="color: #D69D85;"></span>;
         <br>> var interests = ["Software Engineering", "Machine Learning", "Fullstack Development"];
-        <br>> var now = ["This Page", "Working on Gambit!"]; <a style="text-decoration: none;" href="https://github.com/djain106/gambit">//Click Me!</span></a>
+        <!-- <br>> var now = ["This Page", "Working on Gambit!"]; <a style="text-decoration: none;" href="https://github.com/djain106/gambit">//Click Me!</span></a> -->
         </div>
         <div class="section-title" id="experience">
             <h1 class="page-section">Experience</h1>
+            <div class="section-container">
+                <h3><a href="https://www.google.com/">Google</a><i style="float: right;" class="fas fa-code"></i></h3>
+                <p>
+                    <span class="underline">Title</span>: Software Engineer III
+                    <br><span class="underline">Technologies</span>: Go, Python 
+                    <br>Currently, I am working on tooling that enables Google Cloud to track and mitigate risks within its system. My team also works
+                    to help Google automatically identify risks through the power of LLM. Furthermore, I work on a team that helps engineers ensure that
+                    we meet SLOs on customer issues.</p>
+            </div>
             <div class="section-container">
                 <h3><a href="https://www.amazon.com/">Amazon</a><i style="float: right;" class="fas fa-code"></i></h3>
                 <p>
